# rustcodegraph

./: .gitignore  AGENTS.md  BUNDLING.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  README.zh-CN.md  TELEMETRY.md  dist-workspace.toml  install.ps1  install.sh  package-lock.json  package.json
.claude/handoffs/: cross-language-impact-coverage-2026-06-04.md
.github/workflows/: publish-crates.yml  release.yml  test.yml
.vibewindow/: .gitignore
docs/: SEARCH_QUALITY_LOOP.md
docs/benchmarks/: answer-directly-vs-explore-agent.md  call-sequence-analysis.md  rustcodegraph-ab-matrix.md
docs/design/: adaptive-explore-sizing.md  agent-rustcodegraph-adoption.md  callback-edge-synthesis.md  chained-call-resolution.md  dynamic-dispatch-coverage-playbook.md  function-ref-capture.md  (+6 more)
examples/: depth_probe.rs
plan/: _index.md
scripts/: build-bundle.sh  check-rust-ignore-count.sh  local-install.sh  pack-npm.sh
src/: add_lang.rs  agent_eval.rs  directory.rs  errors.rs  index.rs  lib.rs  release.rs  types.rs  utils.rs  web_tree_sitter.rs
telemetry-worker/: .dev.vars.example  .gitignore  Cargo.toml  README.md  wrangler.jsonc
telemetry-worker/src/: lib.rs
tests/: adaptive_explore_sizing_test.rs  add_lang_test.rs  agent_eval_test.rs  cli_affected_paths_test.rs  cli_mcp_parity_test.rs  cli_version_test.rs  cli_watch_test.rs  closure_collection_synthesizer_test.rs  concurrent_locking_test.rs  config_secret_redaction_test.rs  context_ranking_test.rs  context_test.rs  daemon_attach_log_test.rs  daemon_client_liveness_test.rs  daemon_manager_test.rs  daemon_registry_test.rs  db_perf_test.rs  debug_probe_test.rs  drupal_test.rs  dynamic_boundaries_test.rs  evaluation.rs  explore_blast_radius_test.rs  explore_output_budget_test.rs  expo_modules_test.rs  extraction_test.rs  fabric_view_test.rs  fatal_handler_test.rs  foundation_test.rs  frameworks_integration_test.rs  frameworks_test.rs  function_ref_test.rs  generated_detection_test.rs  gin_middleware_chain_test.rs  git_hooks_test.rs  glyphs_test.rs  graph_test.rs  index_command_test.rs  installer_targets_test.rs  installer_test.rs  integration.rs  (+46 more)
(+503 files in other folders)
